--- a/frontend/chat-app/public/index.html
+++ b/frontend/chat-app/public/index.html
@@ -35,6 +35,10 @@
       href="https://fonts.googleapis.com/css2?family=Anton&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Yanone+Kaffeesatz:wght@200;300;400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <title>React App</title>
   </head>
